# M7011E_AJ

./: .gitignore  README.md  TIMEREPORT_Albane.MD  TIMEREPORT_Albane.md  TIMEREPORT_Johan.md  admin_user.json  jest.config.js  package-lock.json  package.json  todo.md  tsconfig.json
Consumer-Group/: Procumer.ts  consumer.ts
Simulator/: Node.ts  index.ts
__tests__/: consumer_test.ts  manager_test.ts  procumer_test.ts
deployment/: ingress_api.json  web-services.json
services/: docker-compose.yaml
services/Simulator/Simulation-API/: Cargo.toml
services/Simulator/Simulation-API/src/: app.rs  app_state.rs  lib.rs
services/Simulator/Simulation-API/src/api/: datapoints.rs  formats.rs  mod.rs
services/Simulator/Simulation-API/src/api/control/: mod.rs  prosumer_controller.rs
services/Simulator/Simulation-API/src/api/members/: consumers.rs  prosumers.rs
services/Simulator/Simulation-API/src/auth/: mod.rs
services/Simulator/Simulation-API/src/controllers/: consumer_controller.rs  data_controller.rs  grid_controller.rs  manager_controller.rs  mod.rs  prosumer_controller.rs
services/Simulator/Simulation-API/src/models/: appstructure.rs  consumer.rs
services/Simulator/Simulation-API/src/models/reports/: consumer_report.rs  manager_report.rs  mod.rs  prosumer_report.rs  weather_report.rs
services/Simulator_migrated/: .env.example  Cargo.toml  dockerfile
services/Simulator_migrated/src/: app.rs  main.rs
services/Simulator_migrated/src/api/: datapoints.rs  formats.rs  grid.rs  mod.rs
services/Simulator_migrated/src/api/control/: manager_controller.rs  prosumer_controller.rs
services/Simulator_migrated/src/api/members/: consumers.rs  grid.rs  managers.rs  mod.rs  prosumers.rs
services/Simulator_migrated/src/db/: app_document.rs  consumer_document.rs  datapoints_document.rs  documents.rs  grid_document.rs  manager_document.rs  mod.rs  prosumer_document.rs  tickets_document.rs
services/Simulator_migrated/src/handlers/: data_handler.rs  manager_handler.rs  mod.rs  network_handler.rs  prosumer_handler.rs  simulation_handler.rs  weather_handler.rs
services/Simulator_migrated/src/middleware/: auth.rs  mod.rs
services/Simulator_migrated/src/models/: consumer.rs  manager.rs  mod.rs  network_types.rs  node.rs  prosumer.rs  reports.rs  user.rs
src/: package-lock.json  (+3 more)
(+333 files in other folders)
