[package]
name = "Simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
warp = "0.3"
dotenv = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
mongodb = "2.2.0"
rand = "0.8.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = { version = "0.2", features = ["serde"] }