[package]
name = "Simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
# warp = "0.3"
# rocket = "0.5.0"
actix-web = { version = "4", features = ["openssl"] }
dotenv = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
# serde_bytes = "0.11"
# why not use features?
lapin = "2.1.1"
tokio-reactor-trait = "1.1.0"
tokio-executor-trait = "2.1.0"

mongodb = "2.2.0"
rand = "0.8.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = { version = "0.2", features = ["serde"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.2.1"
futures-util = "0.3"
openssl = { version = "0.10", features = ["v110"] }
env_logger = "^0.8"
log = "^0.4"
futures = "0.3"
