[package]
name = "Simulation-API"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
tokio = { version = "1.17.0", features = ["full"] }
actix-web = { version = "4", features = ["openssl"] }
actix-web-httpauth = "0.6.0"
actix-cors = "0.6.1"
dotenv = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = { version = "0.2", features = ["serde"] }
chrono = {version= "0.4", features=["serde"]}
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.2.1"
futures-util = "0.3"
openssl = { version = "0.10", features = ["v110"] }
env_logger = "^0.8"
log = "^0.4"
tonic = "0.9.2"
